--- a/apkTools_release/api_debugger.html
+++ b/apkTools_release/api_debugger.html
@@ -36,7 +36,33 @@
       color: #fff;
       padding: 20px 30px;
       text-align: center;
-      flex-shrink: 0
+      flex-shrink: 0;
+      position: relative
+    }
+
+    .home-btn {
+      position: absolute;
+      top: 15px;
+      left: 20px;
+      width: 40px;
+      height: 40px;
+      background: rgba(255, 255, 255, 0.2);
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      text-decoration: none;
+      font-size: 20px;
+      transition: all .3s;
+      z-index: 10;
+    }
+
+    .home-btn:hover {
+      background: rgba(255, 255, 255, 0.3);
+      border-color: rgba(255, 255, 255, 0.5);
+      transform: scale(1.1);
     }
 
     .header h1 {
@@ -548,6 +574,7 @@
 <body>
   <div class="container">
     <div class="header">
+      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>🔧 API 调试工具</h1>
       <p>支持 HTTP 请求和 WebSocket (WSS) 连接调试</p>
     </div>
