--- a/apkTools_release/qrcode_generator.html
+++ b/apkTools_release/qrcode_generator.html
@@ -34,7 +34,33 @@
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: #fff;
       padding: 30px;
-      text-align: center
+      text-align: center;
+      position: relative
+    }
+
+    .home-btn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 40px;
+      height: 40px;
+      background: rgba(255, 255, 255, 0.2);
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      text-decoration: none;
+      font-size: 20px;
+      transition: all .3s;
+      z-index: 10;
+    }
+
+    .home-btn:hover {
+      background: rgba(255, 255, 255, 0.3);
+      border-color: rgba(255, 255, 255, 0.5);
+      transform: scale(1.1);
     }
 
     .header h1 {
@@ -242,6 +268,7 @@
 <body>
   <div class="container">
     <div class="header">
+      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>📱 二维码/条形码生成工具</h1>
       <p>支持自定义样式、颜色和图标，生成高质量二维码和条形码</p>
     </div>
