--- a/apkTools_release/timestamp_converter.html
+++ b/apkTools_release/timestamp_converter.html
@@ -1,39 +1,202 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>时间戳转换工具</title>
   <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);min-height:100vh;padding:20px}
-    .container{max-width:1000px;margin:0 auto;background:#fff;border-radius:16px;box-shadow:0 20px 60px rgba(0,0,0,.3);overflow:hidden}
-    .header{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:#fff;padding:30px;text-align:center}
-    .header h1{font-size:28px;margin-bottom:10px}
-    .header p{opacity:.9;font-size:14px}
-    .content{padding:30px}
-    .form-section{background:#f8f9fa;border-radius:12px;padding:25px;margin-bottom:25px}
-    .form-section h2{font-size:20px;color:#495057;margin-bottom:20px;border-bottom:2px solid #667eea;padding-bottom:10px}
-    .controls-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px}
-    .form-group{margin-bottom:18px}
-    .form-group label{display:block;font-weight:600;color:#495057;margin-bottom:8px;font-size:14px}
-    .form-group input,.form-group select{width:100%;padding:12px;border:2px solid #dee2e6;border-radius:8px;font-size:14px}
-    .btn{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:#fff;border:none;padding:14px 35px;border-radius:8px;font-size:16px;font-weight:600;cursor:pointer;transition:transform .2s;width:100%}
-    .btn:hover{transform:translateY(-2px);box-shadow:0 5px 15px rgba(102,126,234,.4)}
-    .btn-secondary{background:linear-gradient(135deg,#6c757d 0%,#5a6268 100%);margin-top:10px}
-    .result-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:15px;margin-top:20px}
-    .result-card{background:#fff;border:2px solid #dee2e6;border-radius:8px;padding:15px}
-    .result-card-title{font-weight:600;color:#495057;margin-bottom:8px;font-size:14px}
-    .result-card-value{font-family:'Courier New',monospace;font-size:13px;color:#6c757d;word-break:break-all}
-    .status{display:none;margin-top:12px;padding:10px;border-radius:8px}
-    .status.show{display:block}
-    .status.success{background:#d4edda;color:#155724;border:1px solid #c3e6cb}
-    .status.error{background:#f8d7da;color:#721c24;border:1px solid #f5c6cb}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      padding: 20px
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
+      overflow: hidden
+    }
+
+    .header {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: #fff;
+      padding: 30px;
+      text-align: center;
+      position: relative
+    }
+
+    .home-btn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 40px;
+      height: 40px;
+      background: rgba(255, 255, 255, 0.2);
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      text-decoration: none;
+      font-size: 20px;
+      transition: all .3s;
+      z-index: 10
+    }
+
+    .home-btn:hover {
+      background: rgba(255, 255, 255, 0.3);
+      border-color: rgba(255, 255, 255, 0.5);
+      transform: scale(1.1)
+    }
+
+    .header h1 {
+      font-size: 28px;
+      margin-bottom: 10px
+    }
+
+    .header p {
+      opacity: .9;
+      font-size: 14px
+    }
+
+    .content {
+      padding: 30px
+    }
+
+    .form-section {
+      background: #f8f9fa;
+      border-radius: 12px;
+      padding: 25px;
+      margin-bottom: 25px
+    }
+
+    .form-section h2 {
+      font-size: 20px;
+      color: #495057;
+      margin-bottom: 20px;
+      border-bottom: 2px solid #667eea;
+      padding-bottom: 10px
+    }
+
+    .controls-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 15px
+    }
+
+    .form-group {
+      margin-bottom: 18px
+    }
+
+    .form-group label {
+      display: block;
+      font-weight: 600;
+      color: #495057;
+      margin-bottom: 8px;
+      font-size: 14px
+    }
+
+    .form-group input,
+    .form-group select {
+      width: 100%;
+      padding: 12px;
+      border: 2px solid #dee2e6;
+      border-radius: 8px;
+      font-size: 14px
+    }
+
+    .btn {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: #fff;
+      border: none;
+      padding: 14px 35px;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: transform .2s;
+      width: 100%
+    }
+
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(102, 126, 234, .4)
+    }
+
+    .btn-secondary {
+      background: linear-gradient(135deg, #6c757d 0%, #5a6268 100%);
+      margin-top: 10px
+    }
+
+    .result-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 15px;
+      margin-top: 20px
+    }
+
+    .result-card {
+      background: #fff;
+      border: 2px solid #dee2e6;
+      border-radius: 8px;
+      padding: 15px
+    }
+
+    .result-card-title {
+      font-weight: 600;
+      color: #495057;
+      margin-bottom: 8px;
+      font-size: 14px
+    }
+
+    .result-card-value {
+      font-family: 'Courier New', monospace;
+      font-size: 13px;
+      color: #6c757d;
+      word-break: break-all
+    }
+
+    .status {
+      display: none;
+      margin-top: 12px;
+      padding: 10px;
+      border-radius: 8px
+    }
+
+    .status.show {
+      display: block
+    }
+
+    .status.success {
+      background: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb
+    }
+
+    .status.error {
+      background: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb
+    }
   </style>
 </head>
+
 <body>
   <div class="container">
     <div class="header">
+      <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
       <h1>⏰ 时间戳转换工具</h1>
       <p>支持秒级和毫秒级时间戳与日期时间互转</p>
     </div>
@@ -88,136 +251,137 @@
   </div>
 
   <script>
-    const timestampInput=document.getElementById('timestampInput');
-    const timestampType=document.getElementById('timestampType');
-    const convertTimestampBtn=document.getElementById('convertTimestampBtn');
-    const dateInput=document.getElementById('dateInput');
-    const outputType=document.getElementById('outputType');
-    const convertDateBtn=document.getElementById('convertDateBtn');
-    const currentTimeBtn=document.getElementById('currentTimeBtn');
-    const timestampResult=document.getElementById('timestampResult');
-    const dateResult=document.getElementById('dateResult');
-    const currentTimeResult=document.getElementById('currentTimeResult');
-    const status=document.getElementById('status');
+    const timestampInput = document.getElementById('timestampInput');
+    const timestampType = document.getElementById('timestampType');
+    const convertTimestampBtn = document.getElementById('convertTimestampBtn');
+    const dateInput = document.getElementById('dateInput');
+    const outputType = document.getElementById('outputType');
+    const convertDateBtn = document.getElementById('convertDateBtn');
+    const currentTimeBtn = document.getElementById('currentTimeBtn');
+    const timestampResult = document.getElementById('timestampResult');
+    const dateResult = document.getElementById('dateResult');
+    const currentTimeResult = document.getElementById('currentTimeResult');
+    const status = document.getElementById('status');
 
-    function showStatus(text,type){
-      status.textContent=text;
-      status.className='status show '+(type||'success');
-      setTimeout(()=>status.classList.remove('show'),3000);
+    function showStatus(text, type) {
+      status.textContent = text;
+      status.className = 'status show ' + (type || 'success');
+      setTimeout(() => status.classList.remove('show'), 3000);
     }
 
-    function formatDate(date){
-      const year=date.getFullYear();
-      const month=String(date.getMonth()+1).padStart(2,'0');
-      const day=String(date.getDate()).padStart(2,'0');
-      const hours=String(date.getHours()).padStart(2,'0');
-      const minutes=String(date.getMinutes()).padStart(2,'0');
-      const seconds=String(date.getSeconds()).padStart(2,'0');
-      return{
-        dateTime:`${year}-${month}-${day} ${hours}:${minutes}:${seconds}`,
-        date:`${year}-${month}-${day}`,
-        time:`${hours}:${minutes}:${seconds}`,
-        iso:date.toISOString(),
-        local:date.toLocaleString('zh-CN'),
-        utc:date.toUTCString()
+    function formatDate(date) {
+      const year = date.getFullYear();
+      const month = String(date.getMonth() + 1).padStart(2, '0');
+      const day = String(date.getDate()).padStart(2, '0');
+      const hours = String(date.getHours()).padStart(2, '0');
+      const minutes = String(date.getMinutes()).padStart(2, '0');
+      const seconds = String(date.getSeconds()).padStart(2, '0');
+      return {
+        dateTime: `${year}-${month}-${day} ${hours}:${minutes}:${seconds}`,
+        date: `${year}-${month}-${day}`,
+        time: `${hours}:${minutes}:${seconds}`,
+        iso: date.toISOString(),
+        local: date.toLocaleString('zh-CN'),
+        utc: date.toUTCString()
       };
     }
 
-    function createResultCard(title,value){
-      const card=document.createElement('div');
-      card.className='result-card';
-      card.innerHTML=`
+    function createResultCard(title, value) {
+      const card = document.createElement('div');
+      card.className = 'result-card';
+      card.innerHTML = `
         <div class="result-card-title">${title}</div>
         <div class="result-card-value">${value}</div>
       `;
-      card.onclick=()=>{
-        navigator.clipboard.writeText(value).then(()=>{
-          showStatus('已复制：'+title,'success');
-        }).catch(()=>{
-          const textarea=document.createElement('textarea');
-          textarea.value=value;
+      card.onclick = () => {
+        navigator.clipboard.writeText(value).then(() => {
+          showStatus('已复制：' + title, 'success');
+        }).catch(() => {
+          const textarea = document.createElement('textarea');
+          textarea.value = value;
           document.body.appendChild(textarea);
           textarea.select();
           document.execCommand('copy');
           document.body.removeChild(textarea);
-          showStatus('已复制：'+title,'success');
+          showStatus('已复制：' + title, 'success');
         });
       };
       return card;
     }
 
-    convertTimestampBtn.addEventListener('click',()=>{
-      const timestamp=timestampInput.value.trim();
-      if(!timestamp){
-        showStatus('请输入时间戳','error');
+    convertTimestampBtn.addEventListener('click', () => {
+      const timestamp = timestampInput.value.trim();
+      if (!timestamp) {
+        showStatus('请输入时间戳', 'error');
         return;
       }
-      let ts=parseInt(timestamp);
-      if(isNaN(ts)){
-        showStatus('时间戳格式错误','error');
+      let ts = parseInt(timestamp);
+      if (isNaN(ts)) {
+        showStatus('时间戳格式错误', 'error');
         return;
       }
-      const type=timestampType.value;
-      if(type==='auto'){
-        if(timestamp.length<=10)ts*=1000;
-      }else if(type==='second'){
-        ts*=1000;
+      const type = timestampType.value;
+      if (type === 'auto') {
+        if (timestamp.length <= 10) ts *= 1000;
+      } else if (type === 'second') {
+        ts *= 1000;
       }
-      const date=new Date(ts);
-      if(isNaN(date.getTime())){
-        showStatus('时间戳无效','error');
+      const date = new Date(ts);
+      if (isNaN(date.getTime())) {
+        showStatus('时间戳无效', 'error');
         return;
       }
-      const formatted=formatDate(date);
-      timestampResult.innerHTML='';
-      timestampResult.appendChild(createResultCard('日期时间',formatted.dateTime));
-      timestampResult.appendChild(createResultCard('日期',formatted.date));
-      timestampResult.appendChild(createResultCard('时间',formatted.time));
-      timestampResult.appendChild(createResultCard('ISO 8601',formatted.iso));
-      timestampResult.appendChild(createResultCard('本地时间',formatted.local));
-      timestampResult.appendChild(createResultCard('UTC 时间',formatted.utc));
-      showStatus('转换成功','success');
+      const formatted = formatDate(date);
+      timestampResult.innerHTML = '';
+      timestampResult.appendChild(createResultCard('日期时间', formatted.dateTime));
+      timestampResult.appendChild(createResultCard('日期', formatted.date));
+      timestampResult.appendChild(createResultCard('时间', formatted.time));
+      timestampResult.appendChild(createResultCard('ISO 8601', formatted.iso));
+      timestampResult.appendChild(createResultCard('本地时间', formatted.local));
+      timestampResult.appendChild(createResultCard('UTC 时间', formatted.utc));
+      showStatus('转换成功', 'success');
     });
 
-    convertDateBtn.addEventListener('click',()=>{
-      const dateStr=dateInput.value;
-      if(!dateStr){
-        showStatus('请选择日期时间','error');
+    convertDateBtn.addEventListener('click', () => {
+      const dateStr = dateInput.value;
+      if (!dateStr) {
+        showStatus('请选择日期时间', 'error');
         return;
       }
-      const date=new Date(dateStr);
-      if(isNaN(date.getTime())){
-        showStatus('日期格式错误','error');
+      const date = new Date(dateStr);
+      if (isNaN(date.getTime())) {
+        showStatus('日期格式错误', 'error');
         return;
       }
-      const ts=date.getTime();
-      const second=Math.floor(ts/1000);
-      const millisecond=ts;
-      dateResult.innerHTML='';
-      if(outputType.value==='second'){
-        dateResult.appendChild(createResultCard('时间戳（秒）',second.toString()));
-        dateResult.appendChild(createResultCard('时间戳（毫秒）',millisecond.toString()));
-      }else{
-        dateResult.appendChild(createResultCard('时间戳（毫秒）',millisecond.toString()));
-        dateResult.appendChild(createResultCard('时间戳（秒）',second.toString()));
+      const ts = date.getTime();
+      const second = Math.floor(ts / 1000);
+      const millisecond = ts;
+      dateResult.innerHTML = '';
+      if (outputType.value === 'second') {
+        dateResult.appendChild(createResultCard('时间戳（秒）', second.toString()));
+        dateResult.appendChild(createResultCard('时间戳（毫秒）', millisecond.toString()));
+      } else {
+        dateResult.appendChild(createResultCard('时间戳（毫秒）', millisecond.toString()));
+        dateResult.appendChild(createResultCard('时间戳（秒）', second.toString()));
       }
-      showStatus('转换成功','success');
+      showStatus('转换成功', 'success');
     });
 
-    currentTimeBtn.addEventListener('click',()=>{
-      const now=new Date();
-      const ts=now.getTime();
-      const second=Math.floor(ts/1000);
-      const formatted=formatDate(now);
-      currentTimeResult.innerHTML='';
-      currentTimeResult.appendChild(createResultCard('当前时间戳（秒）',second.toString()));
-      currentTimeResult.appendChild(createResultCard('当前时间戳（毫秒）',ts.toString()));
-      currentTimeResult.appendChild(createResultCard('日期时间',formatted.dateTime));
-      currentTimeResult.appendChild(createResultCard('ISO 8601',formatted.iso));
-      showStatus('已获取当前时间','success');
+    currentTimeBtn.addEventListener('click', () => {
+      const now = new Date();
+      const ts = now.getTime();
+      const second = Math.floor(ts / 1000);
+      const formatted = formatDate(now);
+      currentTimeResult.innerHTML = '';
+      currentTimeResult.appendChild(createResultCard('当前时间戳（秒）', second.toString()));
+      currentTimeResult.appendChild(createResultCard('当前时间戳（毫秒）', ts.toString()));
+      currentTimeResult.appendChild(createResultCard('日期时间', formatted.dateTime));
+      currentTimeResult.appendChild(createResultCard('ISO 8601', formatted.iso));
+      showStatus('已获取当前时间', 'success');
     });
 
-    dateInput.value=new Date().toISOString().slice(0,16);
+    dateInput.value = new Date().toISOString().slice(0, 16);
   </script>
 </body>
+
 </html>
