添加机型预览信息工具，支持模糊搜索和实时更新

--- a/apkTools_release/index.html
+++ b/apkTools_release/index.html
@@ -242,6 +242,12 @@
           <div class="tool-desc">JSON 格式化、压缩、验证和可视化预览，支持语法高亮和实时验证。</div>
           <a class="btn" href="./json_formatter.html">打开工具</a>
         </div>
+        <div class="tool-card">
+          <div class="tool-icon">📱</div>
+          <div class="tool-title">机型预览信息工具</div>
+          <div class="tool-desc">查看主流手机机型详细信息，支持实时更新和模糊搜索，包含品牌图标。</div>
+          <a class="btn" href="./device_preview.html">打开工具</a>
+        </div>
       </div>
       <div class="quick-section">
         <div class="quick-title">快速入口</div>
@@ -260,6 +266,7 @@
           <a class="link-pill" href="./api_debugger.html">API 调试</a>
           <a class="link-pill" href="./string_generator.html">字符串生成器</a>
           <a class="link-pill" href="./json_formatter.html">JSON 格式化</a>
+          <a class="link-pill" href="./device_preview.html">机型预览</a>
         </div>
       </div>
     </div>
