feat: 添加 JSON 转 Model 工具，支持多语言模型生成（Swift、OC、Vue、Dart、Kotlin、Java、TypeScript、Python）

--- a/apkTools_release/index.html
+++ b/apkTools_release/index.html
@@ -520,6 +520,7 @@
               <a class="link-pill" href="./apk_analyzer.html">APK 信息提取</a>
               <a class="link-pill" href="./api_debugger.html">API 调试</a>
               <a class="link-pill" href="./json_formatter.html">JSON 格式化</a>
+              <a class="link-pill" href="./json_to_model.html">JSON 转 Model</a>
               <a class="link-pill" href="./device_preview.html">机型预览</a>
             </div>
           </div>
@@ -575,6 +576,7 @@
       { icon: '🔧', title: 'API 调试工具', desc: '支持 HTTP 请求和 WebSocket (WSS) 连接调试，类似 APIFOX，包含请求历史记录。', href: './api_debugger.html' },
       { icon: '🔤', title: '多种字符串生成器', desc: '生成标准银行卡号、UDID、包名、UUID、MAC地址、IP地址、邮箱等常用字符串。', href: './string_generator.html' },
       { icon: '📄', title: 'JSON 格式化工具', desc: 'JSON 格式化、压缩、验证和可视化预览，支持语法高亮和实时验证。', href: './json_formatter.html' },
+      { icon: '🔄', title: 'JSON 转 Model 工具', desc: '支持多语言模型类生成：Swift、OC、Vue、Dart、Kotlin、Java、TypeScript、Python 等。', href: './json_to_model.html' },
       { icon: '📱', title: '机型预览信息工具', desc: '查看主流手机机型详细信息，支持模糊搜索，包含最新iPhone 17系列。', href: './device_preview.html' }
     ];
 
