feat: 重构首页为精美卡片列表，添加推荐指数，更新所有工具 icon

--- a/apkTools_release/json_formatter.html
+++ b/apkTools_release/json_formatter.html
@@ -285,7 +285,7 @@
   <div class="container">
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-      <h1>📄 JSON 格式化工具</h1>
+      <h1>📋 JSON 格式化工具</h1>
       <p>JSON 格式化、验证和可视化预览</p>
     </div>
     <div class="content">
