--- a/apkTools_release/keystore_generator.html
+++ b/apkTools_release/keystore_generator.html
@@ -447,7 +447,7 @@
     <div class="container">
         <div class="header">
             <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-            <h1>🔐 Android 签名文件生成工具</h1>
+            <h1>🔑 Android 签名文件生成工具</h1>
             <p>根据包名生成发布签名文件并提取签名信息</p>
         </div>
         <div class="content">
