--- a/apkTools_release/string_generator.html
+++ b/apkTools_release/string_generator.html
@@ -212,7 +212,7 @@
   <div class="container">
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-      <h1>🔧 多种字符串生成器</h1>
+      <h1>🔤 多种字符串生成器</h1>
       <p>生成标准银行卡号、UDID、包名等常用字符串</p>
     </div>
     <div class="content">
