--- a/apkTools_release/text_image_generator.html
+++ b/apkTools_release/text_image_generator.html
@@ -377,7 +377,7 @@
     <div class="container">
         <div class="header">
             <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-            <h1>🎨 文字图片生成工具</h1>
+            <h1>✍️ 文字图片生成工具</h1>
             <p>输入文字和背景颜色，生成 1024×1024 纯文字图片（低于 50KB）</p>
         </div>
         <div class="content">
