--- a/apkTools_release/api_debugger.html
+++ b/apkTools_release/api_debugger.html
@@ -575,7 +575,7 @@
   <div class="container">
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-      <h1>🔧 API 调试工具</h1>
+      <h1>🌐 API 调试工具</h1>
       <p>支持 HTTP 请求和 WebSocket (WSS) 连接调试</p>
     </div>
 
