--- a/apkTools_release/apk_analyzer.html
+++ b/apkTools_release/apk_analyzer.html
@@ -247,7 +247,7 @@
     <div class="container">
         <div class="header">
             <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-            <h1>📱 APK/Keystore 信息提取工具</h1>
+            <h1>📦 APK/Keystore 信息提取工具</h1>
             <p>上传 APK 文件或 Keystore/JKS 文件以提取签名信息</p>
         </div>
         <div class="content">
