--- a/apkTools_release/svg_converter.html
+++ b/apkTools_release/svg_converter.html
@@ -246,7 +246,7 @@
   <div class="container">
     <div class="header">
       <a href="./index.html" class="home-btn" title="返回首页">🏠</a>
-      <h1>🛠️ SVG 互转 PNG/JPG/JPEG</h1>
+      <h1>🔄 SVG 互转 PNG/JPG/JPEG</h1>
       <p>支持上传 SVG 或 PNG/JPG/JPEG，进行相互转换与下载</p>
     </div>
     <div class="content">
